--- a/index.html
+++ b/index.html
@@ -1,170 +1,13 @@
 <!doctype html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>馥靈之鑰｜7日情緒紓解挑戰</title>
-  <meta name="description" content="七天看得見的情緒變化：每天10分鐘，香氣×文字×小行動，讓生活回到你手上。">
-  <link rel="stylesheet" href="styles.css">
-  <style>
-    /* Fallback fonts only; no external calls to keep file portable */
-  </style>
-  <script>
-    // 👉 改這裡即可：等綠界金流審核通過，把下面三條連結換成你的 ECPay 收款連結
-    // 目前預設改為 LINE 官方帳號，確保上線即可收單（人工回覆）
-    window.LINKS = {
-      PAY_299: "https://line.me/ti/p/ExZKz8O2eh",
-      PAY_36K: "https://line.me/ti/p/ExZKz8O2eh",
-      PAY_88K: "https://line.me/ti/p/ExZKz8O2eh",
-      LINE: "https://line.me/ti/p/ExZKz8O2eh"
-    };
-    document.addEventListener('DOMContentLoaded', function() {
-      document.querySelectorAll('[data-link]').forEach(function(a) {
-        var key = a.getAttribute('data-link');
-        if (window.LINKS[key]) {
-          a.setAttribute('href', window.LINKS[key]);
-        }
-      });
-    });
-  </script>
-</head>
-<body>
-  <header class="hero">
-    <div class="wrap">
-      <div class="brand">
-        <div class="logo" aria-hidden="true">HL</div>
-        <div class="brand-text">
-          <strong>馥靈之鑰®</strong>
-          <span>情緒紓解 × 能量調頻 × 壓力管理</span>
-        </div>
-      </div>
-      <h1>七天看得見的情緒變化</h1>
-      <p class="sub">每天 10 分鐘，香氣 × 文字 × 小行動，讓生活回到你手上</p>
-      <div class="cta">
-        <a class="btn primary" data-link="PAY_299" aria-label="加入7日挑戰（NT$299）">加入 7 日挑戰（NT$299）</a>
-        <a class="btn outline" data-link="LINE" aria-label="加官方帳號諮詢">加官方帳號諮詢</a>
-      </div>
-      <ul class="trust">
-        <li>固定晚上 <b>21:00</b> 發佈</li>
-        <li>第 7 晚直播示範（回放 72 小時）</li>
-        <li>每梯限額 <b>120</b> 位</li>
-      </ul>
-    </div>
-  </header>
-
-  <section class="why wrap">
-    <h2>為什麼做得到？</h2>
-    <p>我們把香氣、圖像與文字做成可重複的 HOUR 四步：<b>校準 → 辨識 → 解鎖 → 行動</b>。你不需要背理論，只要每天 10 分鐘，照步驟做，就能把一天的節奏拉回來。</p>
-    <div class="pill-row">
-      <span class="pill">更穩（心不亂）</span>
-      <span class="pill">更清（界線清）</span>
-      <span class="pill">更敢（行動敢）</span>
-    </div>
-  </section>
-
-  <section class="who wrap">
-    <h2>誰適合參加</h2>
-    <ul class="bullets">
-      <li>白天扛住一切、夜裡腦內小劇場停不下來的你</li>
-      <li>美業／芳療／教練與個人工作者：想把關懷做成可收費服務</li>
-      <li>想讓每天更有序、更可控的人：先從 10 分鐘開始</li>
-    </ul>
-  </section>
-
-  <section class="get wrap">
-    <h2>你會得到</h2>
-    <div class="grid">
-      <div class="card"><h3>AI 指引卡</h3><p>每日 1 張圖像＋一句提示</p></div>
-      <div class="card"><h3>香氣文字引導</h3><p>把注意力拉回中心</p></div>
-      <div class="card"><h3>3 分鐘小行動</h3><p>呼吸／伸展／步行／水分</p></div>
-      <div class="card"><h3>第 7 晚直播</h3><p>現場示範與 Q&A（回放 72 小時）</p></div>
-    </div>
-  </section>
-
-  <section class="days wrap">
-    <h2>7 天流程</h2>
-    <ol class="days-list">
-      <li><b>D1</b> 重新連線：呼吸 30 下；睡前 3 分鐘伸展</li>
-      <li><b>D2</b> 輕柔界線：把「不好意思」換成「感謝提醒，我晚點回你」</li>
-      <li><b>D3</b> 身體雷達：找出最緊一點，手心覆蓋 60 秒；喝 500ml 溫水</li>
-      <li><b>D4</b> 把霧變成字：我現在是（焦慮／煩躁／擔心／空空的）</li>
-      <li><b>D5</b> 最小行動：完成一件可見成果（折衣、清桌面）</li>
-      <li><b>D6</b> 關係一句話：發「謝謝你今天出現」給某人</li>
-      <li><b>D7</b> 整合＋直播：選出最有用的一步；90 分鐘直播示範</li>
-    </ol>
-  </section>
-
-  <section class="social-proof wrap">
-    <h2>學員回饋</h2>
-    <ul class="quotes">
-      <li>「睡前腦內雜音變小，早上比較能準時起床了。」</li>
-      <li>「客人反而主動問：下次什麼時候再約？」</li>
-      <li>「我不再追求完美，只做得成那一小步。」</li>
-    </ul>
-  </section>
-
-  <section class="pricing wrap">
-    <h2>報名與升級</h2>
-    <div class="grid three">
-      <div class="card tall">
-        <h3>7 日挑戰</h3>
-        <p class="price">NT$299</p>
-        <a class="btn primary block" data-link="PAY_299" aria-label="加入7日挑戰">立即加入</a>
-        <p class="note">付款連結未開通前，將以 LINE 報名；開通後改為信用卡付款。</p>
-      </div>
-      <div class="card tall">
-        <h3>自己用工具</h3>
-        <p class="price">NT$36,000 / 年</p>
-        <ul class="mini">
-          <li>AI 抽卡權限</li>
-          <li>每月共學 1 次</li>
-          <li>教材持續更新</li>
-        </ul>
-        <a class="btn outline block" data-link="PAY_36K">升級了解</a>
-      </div>
-      <div class="card tall">
-        <h3>專業服務</h3>
-        <p class="price">NT$88,000 / 年</p>
-        <ul class="mini">
-          <li>含「自己用工具」全部</li>
-          <li>服務教案與話術</li>
-          <li>收益共享機制資格</li>
-        </ul>
-        <a class="btn outline block" data-link="PAY_88K">升級了解</a>
-      </div>
-    </div>
-    <p class="hint">高價方案每月限 <b>11</b> 位；前 11 名加贈 45 分鐘個別梳理（30 天內使用）。</p>
-  </section>
-
-  <section class="contact wrap">
-    <h2>聯繫與地址（預約制）</h2>
-    <div class="grid two">
-      <div class="card light">
-        <h3>線上客服</h3>
-        <p>LINE 官方帳號：<a data-link="LINE">點我加入</a></p>
-        <p>（加好友後輸入：<b>我要報名 7 日挑戰</b>）</p>
-      </div>
-      <div class="card light">
-        <h3>實體據點</h3>
-        <p>桃園｜桃園市桃園區同安街 666 號</p>
-        <p>高雄｜前鎮區瑞祥街 1 巷 35 號</p>
-        <p class="small">到訪請先預約，避免撲空。</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="cta2">
-    <div class="wrap">
-      <a class="btn primary big" data-link="PAY_299">加入 7 日挑戰（NT$299）</a>
-      <p class="subtle">或先加官方帳號詢問：<a data-link="LINE">點我</a></p>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="wrap">
-      <p class="legal">免責：本系統與課程僅提供身心放鬆、情緒紓解、能量調頻、壓力管理等服務，非醫療行為；如有嚴重生理或心理困擾，請尋求合格醫療或心理專業人員協助。</p>
-      <p class="copyright">© 2025 馥靈之鑰 Hour Light</p>
-    </div>
-  </footer>
-</body>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>社團法人基督國度婦女工作聯盟 | Christian Kingdom Women's Work Alliance</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
